# ChangeLog for x11-libs/gksu
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gksu/ChangeLog,v 1.59 2010/07/20 01:41:33 jer Exp $

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> gksu-2.0.2.ebuild:
  Drop HPPA keywording (bug #324511).

  22 Mar 2010; Pacho Ramos <pacho@gentoo.org> gksu-2.0.2.ebuild:
  Set GCONF_DEBUG=no, bug 263406

  13 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org -gksu-2.0.0.ebuild,
  -gksu-2.0.0-r2.ebuild, -files/gksu-2.0.0-new-nautilus.patch:
  Clean up old revisions.

  06 Sep 2009; Brent Baude <ranger@gentoo.org> gksu-2.0.2.ebuild:
  Marking gksu-2.0.2 ppc64 for bug 278443

  19 Aug 2009; Jeroen Roovers <jer@gentoo.org> gksu-2.0.2.ebuild:
  Stable for HPPA (bug #278443).

  09 Aug 2009; nixnut <nixnut@gentoo.org> gksu-2.0.2.ebuild:
  ppc stable #278443

  27 Jul 2009; <chainsaw@gentoo.org> gksu-2.0.2.ebuild:
  Marked stable on AMD64 as requested by Pacho Ramos in bug #278443.
  Compile-tested on Core2 Duo with USE="gnome -debug -doc".

  23 Jul 2009; Raúl Porcel <armin76@gentoo.org> gksu-2.0.2.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #278443

  22 Jul 2009; Christian Faulhammer <fauli@gentoo.org> gksu-2.0.2.ebuild:
  stable x86, bug 278443

*gksu-2.0.2 (22 Mar 2009)

  22 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org> -gksu-1.9.1.ebuild,
  -gksu-2.0.0-r1.ebuild, +gksu-2.0.2.ebuild:
  Bump to 2.0.2. Closes #263074.

*gksu-2.0.0-r2 (29 Oct 2008)

  29 Oct 2008; Daniel Gryniewicz <dang@gentoo.org>
  +files/gksu-2.0.0-new-nautilus.patch, +gksu-2.0.0-r2.ebuild:
  Bump to gksu-2.0.0-r2

  - Fix nautilus extension directory. Bug #241586

  24 May 2008; Daniel Gryniewicz <dang@gentoo.org> gksu-2.0.0-r1.ebuild:
  Oops, forgot the dep on gnome-terminal

*gksu-2.0.0-r1 (24 May 2008)

  24 May 2008; Daniel Gryniewicz <dang@gentoo.org> +gksu-2.0.0-r1.ebuild:
  Bug #158469
  - Only install gksu.desktop if use gnome
  - Make it use gnome-terminal
