@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gksu-2.0.0-gnome-2.22.patch 629 RMD160 fa9301fff5389891af1f74f9da5163500082083a SHA1 813d7cd2ac823ca14210293d927ab98e34719321 SHA256 2171c58f95e353f6b5f4886c6f6fb8737765dbe9e24826eada1e17e329e72d19
 DIST gksu-2.0.2.tar.gz 468121 RMD160 2864cb95529532c698b1be75914f30a70bb8145f SHA1 dae634e3ed2aa8c3f2bebac17d875bcb49d825cc SHA256 a1de3dca039d88c195fcdc9516379439a1d699750417f1e655aa2101a955ee5a
-EBUILD gksu-2.0.2.ebuild 2061 RMD160 473ec4579e29305288acbde0fada2f7c2468ce7a SHA1 938cade877ed171728e146917576e05fca08d1f1 SHA256 72c942d773b4fdd7cc68d575bdeeab67a9dcc2a52e42bd46e0b785693e0b3cc8
-MISC ChangeLog 7635 RMD160 d1242927cbce15239768ff622ce33f824f320a56 SHA1 bea864d09d151daa6a4ca1fc260618f2fd2476a2 SHA256 1ab34bef1e1d36aaee17c2a168f1da5e204dbd464774de0eea4596803fe1e6ab
+EBUILD gksu-2.0.2.ebuild 2032 RMD160 fc0aed6f1427e95ee964283d6cadf17d3b621a8b SHA1 b9ab7e251c53cc30d65108fa945d90625ecac167 SHA256 fc6559ea9956953df7415be94acd15a43aada6897dcf17708723583da15135b5
+MISC ChangeLog 7751 RMD160 eb8c52031ef746ca197911179de85f78102afe60 SHA1 2e05466ef66564c4691dacd6586fc178d612929e SHA256 6e30f0bcc105ed64b9380834e2308cd14136c39a4e5381cfb0b8ef19612940a6
 MISC metadata.xml 249 RMD160 232402c3dc66cb4d08397ad2538d236cca544d43 SHA1 4c3a20bb527f8ca870393e2ab0fd97cd9757c271 SHA256 f67a6a51147ab0cff4490c7119c4edb3ae1b1b8587b92a806a937c9eb92cdfa5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAk0iXYsACgkQ1fmVwcYIWAbUwgCg7KIGlq+y1cK5dL4YmLbh9CgA
+5mUAn0kMeHbKIGU3Fw+xyV3xk3RtwXF8
+=k8Tq
+-----END PGP SIGNATURE-----
